--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header><h1>Referências em ABNT</h1></header>
-    <a href="ref_mat_aut.html">Referência de matéria com autor</a>
+    <a href="ref_mat_aut.html">Referência de matéria com autor</a> <br>
     <a href="ref_mat_noaut.html">Referência de matéria sem autor</a>
 </body>
 </html>
