--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        }
+        .button{
+            max-width: 150px;
+        }
+        #sec{
+            margin: auto;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-<header><h1>Referências em ABNT</h1></header>
-    <a href="ref_mat_aut.html">Referência de matéria com autor</a> <br>
-    <a href="ref_mat_noaut.html">Referência de matéria sem autor</a>
+    <header id="sec"><h1>Referências em ABNT</h1></header>
+    <section id="sec">
+        <a href="ref_mat_aut.html"><img src="but-noaut.jpg" alt="Referência de matéria sem autor" class="button"></a>
+        <a href="ref_mat_noaut.html"><img src="but-aut.jpg" alt="Referência de matéria sem autor" class="button"></a>
+    </section>
 </body>
 </html>
