--- a/ref_mat_aut.html
+++ b/ref_mat_aut.html
@@ -63,6 +63,7 @@
         <input type="text" placeholder="Ano do acesso" class="inputs" id="year1" maxlength="4">
         <br>
         <button type="submit" onclick="enviar()">Enviar</button>
+        <a href="index.html"><Button>Voltar</Button></a>
     </div>
     <div id="saida">
     </div>
