--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <section id="sec">
         <a href="ref_mat_aut.html"><img src="but-noaut.jpg" alt="Referência de matéria sem autor" class="button"></a>
         <a href="ref_mat_noaut.html"><img src="but-aut.jpg" alt="Referência de matéria sem autor" class="button"></a>
+        <br>
+        <a href="ref_artimp.html"><img src="but-artimp.jpg" alt="Referência de artigo impresso" class="button"></a>
     </section>
 </body>
 </html>
